--- a/package.json
+++ b/package.json
@@ -31,16 +31,20 @@
   "dependencies": {
     "body-parser": "1.17.1",
     "express": "4.14.0",
+    "jquery": "^3.2.1",
     "less": "2.7.1",
     "mongoose": "4.11.12",
     "prop-types": "15.5.10",
     "react": "15.4.2",
     "react-dom": "15.4.2",
     "react-draggable": "2.2.6",
+    "react-redux": "^5.0.6",
     "react-router": "3.0.5",
     "react-swipeable": "4.0.0",
     "react-tappable": "1.0.0",
     "react-tooltip": "3.3.0",
-    "underscore": "1.8.3"
+    "redux": "^3.7.2",
+    "underscore": "1.8.3",
+    "whatwg-fetch": "^2.0.3"
   }
 }
