--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "webpack": "3.5.5"
   },
   "dependencies": {
+    "antd": "^2.13.8",
     "body-parser": "1.17.1",
     "express": "4.14.0",
     "jquery": "^3.2.1",
