--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "chai": "^4.1.2",
     "compression-webpack-plugin": "1.0.0",
     "css-loader": "0.28.5",
+    "file-loader": "^1.1.5",
     "less-loader": "4.0.5",
     "mocha": "^3.5.3",
     "nodemon": "1.11.0",
     "style-loader": "0.18.2",
+    "url-loader": "^0.6.2",
     "webpack": "3.5.5"
   },
   "dependencies": {
