--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-draggable": "2.2.6",
     "react-redux": "^5.0.6",
     "react-router": "3.0.5",
+    "react-router-dom": "^4.2.2",
     "react-swipeable": "4.0.0",
     "react-tappable": "1.0.0",
     "react-tooltip": "3.3.0",
