--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "chai": "^4.1.2",
     "compression-webpack-plugin": "1.0.0",
     "css-loader": "0.28.5",
-    "file-loader": "^1.1.5",
+    "file-loader": "^1.1.11",
     "less-loader": "4.0.5",
     "mocha": "^3.5.3",
     "nodemon": "1.11.0",
@@ -31,10 +31,11 @@
     "webpack": "3.5.5"
   },
   "dependencies": {
-    "antd": "^2.13.8",
+    "antd": "^2.13.13",
     "body-parser": "1.17.1",
+    "dotenv": "^5.0.1",
     "express": "4.14.0",
-    "jquery": "^3.2.1",
+    "jquery": "^3.3.1",
     "less": "2.7.1",
     "mongoose": "4.11.12",
     "prop-types": "15.5.10",
@@ -42,7 +43,7 @@
     "react-dom": "15.4.2",
     "react-draggable": "2.2.6",
     "react-dropzone-s3-uploader": "1.1.0",
-    "react-redux": "^5.0.6",
+    "react-redux": "^5.0.7",
     "react-router": "3.0.5",
     "react-router-dom": "^4.2.2",
     "react-swipeable": "4.0.0",
@@ -50,6 +51,6 @@
     "react-tooltip": "3.3.0",
     "redux": "^3.7.2",
     "underscore": "1.8.3",
-    "whatwg-fetch": "^2.0.3"
+    "whatwg-fetch": "^2.0.4"
   }
 }
