--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "server.js",
   "scripts": {
     "watch": "webpack -d --watch --config ./config/webpack/development.js",
-    "build": "NODE_ENV=production webpack -p --config ./config/webpack/production.js",
+    "build": "NODE_ENV=PROD webpack -p --config ./config/webpack/production.js",
     "start": "nodemon server.js",
     "test": " npm run test-api && npm run test-e2e",
     "test-e2e": "./node_modules/.bin/wdio wdio.conf.js",
